feat(phase-9g): P9-71 — Add supplier dashboard enhancements with matching status breakdown and next expected payment date